--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -23,7 +23,7 @@
   height: 77px;
   display: flex;
   align-items: center;
-  position: fixed;
+  // position: fixed;
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   background: rgba(0, 0, 0, 0.1);
