--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -33,7 +33,6 @@
   background-color: #ffc719;
   color: black;
 }
-
 .show-password {
   color: black;
   text-transform: none;
@@ -48,19 +47,22 @@
   background-color: #fff;
   min-height: 100vh;
   overflow: hidden;
-}
-.container:before {
-  content: "";
-  position: absolute;
-  height: 2000px;
-  width: 2000px;
-  top: -10%;
-  right: 48%;
-  transform: translateY(-50%);
-  background-color: rgb(46, 112, 187);
-  transition: 1.8s ease-in-out;
-  border-radius: 50%;
-  z-index: 6;
+
+  &:before {
+    content: "";
+    position: absolute;
+    height: 2000px;
+    width: 2000px;
+    top: -10%;
+    right: 48%;
+    transform: translateY(-50%);
+    background-color: rgb(46, 112, 187);
+    // background-color: rgb(135, 187, 222);
+    // background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
+    transition: 1.8s ease-in-out;
+    border-radius: 50%;
+    z-index: 6;
+  }
 }
 
 .forms-container {
@@ -83,7 +85,7 @@
   z-index: 5;
 }
 
-form {
+.sign-form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,15 +93,17 @@ form {
   padding: 0rem 5rem;
   transition: all 0.2s 0.7s;
   overflow: hidden;
-  grid-column: 1/2;
-  grid-row: 1/2;
-}
-form.sign-up-form {
-  opacity: 0;
-  z-index: 1;
-}
-form.sign-in-form {
-  z-index: 2;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+
+  &.sign-up-form {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  &.sign-in-form {
+    z-index: 2;
+  }
 }
 
 .title {
@@ -120,10 +124,11 @@ form.sign-in-form {
   grid-template-columns: 15% 85%;
   padding: 0 1.5rem;
   position: relative;
-}
-.input-field .fa-fa {
-  align-self: center;
-  transition: 0.5s;
+
+  .fa-fa {
+    align-self: center;
+    transition: 0.5s;
+  }
 }
 
 .input-field input {
@@ -135,14 +140,11 @@ form.sign-in-form {
   font-size: 1.1rem;
   color: #333;
   font-family: "Futura PT W02 Book", Futura, "Trebuchet MS", Arial, sans-serif;
-}
-.input-field input::-moz-placeholder {
-  color: #aaa;
-  font-weight: 500;
-}
-.input-field input::placeholder {
-  color: #aaa;
-  font-weight: 500;
+
+  &::placeholder {
+    color: #aaa;
+    font-weight: 500;
+  }
 }
 
 .social-text {
@@ -169,13 +171,15 @@ form.sign-in-form {
   text-decoration: none;
   font-size: 1.1rem;
   transition: 0.3s;
-}
-.social-icon:hover {
-  border: 1px solid #ffc719;
+
+  &:hover {
+    border: 1px solid #ffc719;
+  }
 }
 
 .btn {
   width: 150px;
+  // background-color: #5995fd;
   background-color: rgb(46, 112, 187);
   border: none;
   outline: none;
@@ -188,9 +192,10 @@ form.sign-in-form {
   margin: 10px 0;
   cursor: pointer;
   transition: 0.5s;
-}
-.btn:hover {
-  background-color: #333;
+
+  &:hover {
+    background-color: #333;
+  }
 }
 
 .panels-container {
@@ -216,44 +221,45 @@ form.sign-in-form {
   justify-content: space-around;
   text-align: center;
   z-index: 6;
-}
-.panel .content {
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  transition: transform 0.9s ease-in-out;
-  transition-delay: 0.6s;
-  align-items: center;
-}
-.panel h3 {
-  font-weight: 600;
-  line-height: 1;
-  font-size: 2rem;
-}
-.panel p {
-  font-size: 1.5rem;
-  padding: 0.7rem 0;
+
+  & .content {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.6s;
+    align-items: center;
+  }
+
+  & h3 {
+    font-weight: 600;
+    line-height: 1;
+    font-size: 2rem;
+  }
+
+  & p {
+    font-size: 1.5rem;
+    padding: 0.7rem 0;
+  }
 }
 
 .btn.transparent {
   background: none;
   border: 2px solid #fff;
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   font-weight: 600;
   font-size: 1rem;
-}
-.btn.transparent:hover {
-  border: 2px solid #ffc719;
+
+  &:hover {
+    border: 2px solid #ffc719;
+  }
 }
 
 .right-panel .image,
 .right-panel .content {
   transform: translateX(800px);
 }
-
 .left-panel {
   pointer-events: all;
   padding: 3rem 17% 2rem 12%;
@@ -265,35 +271,57 @@ form.sign-in-form {
 }
 
 /* ANIMATION */
-.container.sign-up-mode:before {
-  transform: translate(100%, -50%);
-  right: 52%;
-}
-.container.sign-up-mode .left-panel .image, .container.sign-up-mode .left-panel .content {
-  transform: translateX(-800px);
-}
-.container.sign-up-mode .signin-signup {
-  left: 25%;
-}
-.container.sign-up-mode form.sign-up-form {
-  opacity: 1;
-  z-index: 2;
-}
-.container.sign-up-mode form.sign-in-form {
-  opacity: 0;
-  z-index: 1;
-}
-.container.sign-up-mode .right-panel .image, .container.sign-up-mode .right-panel .content {
-  transform: translateX(0%);
-}
-.container.sign-up-mode .left-panel {
-  pointer-events: none;
-}
-.container.sign-up-mode .right-panel {
-  pointer-events: all;
+
+.container.sign-up-mode {
+  &:before {
+    transform: translate(100%, -50%);
+    right: 52%;
+  }
+
+  & .left-panel .image,
+  & .left-panel .content {
+    transform: translateX(-800px);
+  }
+
+  & .signin-signup {
+    left: 25%;
+  }
+
+  & form.sign-up-form {
+    opacity: 1;
+    z-index: 2;
+  }
+
+  & form.sign-in-form {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  & .right-panel .image,
+  & .right-panel .content {
+    transform: translateX(0%);
+  }
+
+  & .left-panel {
+    pointer-events: none;
+  }
+
+  & .right-panel {
+    pointer-events: all;
+  }
 }
 
 @media (max-width: 870px) {
+  // .red-alert {
+  //   padding: 20px;
+  //   background-color: #f44336;
+  //   color: white;
+  //   word-break: break;
+  //   width: fit-content;
+  //   margin: 0rem;
+  //   height: 4rem;
+  //   font-size: 0.8rem;
+  // }
   .container {
     min-height: 800px;
     height: 100vh;
@@ -304,51 +332,60 @@ form.sign-in-form {
     transform: translate(-50%, -100%);
     transition: 1s 0.8s ease-in-out;
   }
+
   .signin-signup,
   .container.sign-up-mode .signin-signup {
     left: 50%;
   }
+
   .panels-container {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr 1fr;
   }
+
   .right-panel {
-    grid-row: 3/4;
+    grid-row: 3 / 4;
   }
+
   .left-panel {
-    grid-row: 1/2;
+    grid-row: 1 / 2;
   }
+
   .image {
     width: 200px;
     transition: transform 0.9s ease-in-out;
     transition-delay: 0.6s;
   }
+
   .panel {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     padding: 2.5rem 8%;
-    grid-column: 1/2;
+    grid-column: 1 / 2;
+
+    &.content {
+      padding-right: 15%;
+      transition: transform 0.9s ease-in-out;
+      transition-delay: 0.8s;
+    }
+
+    & h3 {
+      font-size: 1.2rem;
+    }
+
+    & p {
+      font-size: 0.7rem;
+      padding: 0.5rem 0;
+    }
   }
-  .panel.content {
-    padding-right: 15%;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.8s;
-  }
-  .panel h3 {
-    font-size: 1.2rem;
-  }
-  .panel p {
-    font-size: 0.7rem;
-    padding: 0.5rem 0;
-  }
+
   .btn.transparent {
-    width: -moz-fit-content;
     width: fit-content;
-    height: -moz-fit-content;
     height: fit-content;
     font-size: 0.7rem;
   }
+
   .container:before {
     width: 1500px;
     height: 1500px;
@@ -359,32 +396,47 @@ form.sign-in-form {
     top: initial;
     transition: 2s ease-in-out;
   }
+
   .container.sign-up-mode:before {
     transform: translate(-50%, 100%);
     bottom: 32%;
     right: initial;
   }
+
   .container.sign-up-mode .left-panel .image,
   .container.sign-up-mode .left-panel .content {
     transform: translateY(-300px);
   }
+
   .container.sign-up-mode .right-panel .image,
   .container.sign-up-mode .right-panel .content {
     transform: translateY(0px);
   }
+
   .right-panel .image,
   .right-panel .content {
     transform: translateY(300px);
   }
+
   .container.sign-up-mode .signin-signup {
     top: 5%;
     transform: translate(-50%, 0);
   }
 }
+
 @media (max-width: 570px) {
+  // .red-alert {
+  //   background-color: #f44336;
+  //   color: white;
+  //   word-break: break;
+  //   width: 18rem;
+  //   height: 2rem;
+  //   font-size: 0.6rem;
+  // }
   form {
     padding: 0 1.5rem;
   }
+
   .image {
     display: none;
   }
@@ -393,123 +445,22 @@ form.sign-in-form {
   }
   .container {
     padding: 1.5rem;
-  }
-  .container:before {
-    bottom: 72%;
-    left: 50%;
-  }
-  .container.sign-up-mode:before {
-    bottom: 28%;
-    left: 50%;
-  }
-}
-* {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-  font-family: "Futura PT W02 Book", Futura, "Trebuchet MS", Arial, sans-serif;
-}
 
-body {
-  width: 100vw;
-  height: 100vh;
-  font-family: "Futura PT W02 Book", Futura, "Trebuchet MS", Arial, sans-serif;
-  color: rgba(255, 255, 255, 0.9);
-  background-color: #ecedef;
-  color: black;
-}
+    &:before {
+      bottom: 72%;
+      left: 50%;
+    }
 
-button {
-  opacity: 1;
-  transition: color 0.3s linear, border-color 0.3s linear;
-  text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.9);
-  border: 2px solid rgba(255, 255, 255, 0.7);
-  outline: 0;
-  background: 0 0;
-  text-decoration: none;
-  padding: 2.2vmin 3.75vmin;
-  margin: 0 3px;
-  font-size: 2.2vmin;
-  letter-spacing: 0.14667vmin;
-  line-height: 1;
-  cursor: pointer;
-}
-button:hover {
-  color: #ffc719;
-  border: 2px solid #ffc719;
-}
-
-a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: white;
-  box-sizing: border-box;
-  letter-spacing: 0.1025em;
-  font-size: 1em;
-  transition-timing-function: linear;
-  transition-duration: 0.5s;
-  transition-property: color;
-  border-bottom: 4px solid transparent;
-}
-
-a:hover {
-  color: #ffc719;
-}
-
-.alert-popup {
-  width: -moz-max-content;
-  width: max-content;
-  min-width: 300px;
-  height: 60px;
-  position: fixed;
-  top: 5.5rem;
-  right: 0;
-  border: 4px solid;
-  border-bottom-left-radius: 7px;
-  border-top-left-radius: 7px;
-  font-size: 1.3rem;
-  padding-left: 10px;
-  padding-top: 10px;
-  padding-bottom: 20px;
-  animation: drop 0.7s ease forwards, raise 0.7s 3s ease forwards;
-}
-.alert-popup.error-message {
-  background-color: rgb(240, 164, 164);
-  border-color: rgb(253, 64, 64);
-  color: red;
-}
-.alert-popup.alert-message {
-  background-color: rgb(190, 214, 241);
-  border-color: rgb(47, 144, 255);
-  color: rgb(92, 168, 255);
-}
-
-@keyframes drop {
-  0% {
-    right: -500px;
-  }
-  10% {
-    right: -200px;
-  }
-  40% {
-    right: 30px;
-  }
-  60% {
-    right: 0px;
-  }
-  100% {
-    right: 0px;
+    &.sign-up-mode:before {
+      bottom: 28%;
+      left: 50%;
+    }
   }
 }
-@keyframes raise {
-  0% {
-    right: 0px;
-  }
-  30% {
-    right: -400px;
-  }
-  100% {
-    right: -500px;
-  }
-}/*# sourceMappingURL=App.css.map */
+// @media (min-width: 1370px) {
+//   .red-alert {
+//     padding: 20px;
+//     font-size: 1rem;
+//     width: fit-content;
+//   }
+// }
