--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -17,8 +17,8 @@ button {
   opacity: 1;
   transition: color 0.3s linear, border-color 0.3s linear;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.9);
-  border: 2px solid rgba(255, 255, 255, 0.7);
+  // color: rgba(255, 255, 255, 0.9);
+  // border: 2px solid rgba(255, 255, 255, 0.7);
   outline: 0;
   background: 0 0;
   text-decoration: none;
