fixed the alert modal

--- a/client/src/components/Challenge/ExerciseChallenge.scss
+++ b/client/src/components/Challenge/ExerciseChallenge.scss
@@ -416,3 +416,13 @@
     }
   }
 }
+
+.share-message-textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-family: inherit;
+  resize: vertical;
+}
