added modal's style

--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -178,12 +178,12 @@
 }
 
 .btn {
-  width: 150px;
+  // width: 150px;
   // background-color: #5995fd;
-  background-color: rgb(46, 112, 187);
+  // background-color: rgb(46, 112, 187);
   border: none;
   outline: none;
-  height: 49px;
+  // height: 49px;
   border-radius: 49px;
   color: #fff;
   text-transform: uppercase;
