--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
+.badges-section {
+  margin-top: 30px;
+  text-align: center;
+  padding: 20px;
+  background: linear-gradient(135deg, #ffffff, #f8f8f8);
+  border-radius: 15px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+.badges-section:hover {
+  transform: scale(1.02);
+}
 
 body,
 html {
@@ -170,21 +182,15 @@ html {
 /* Button styles */
 .btn {
   padding: 10px 20px;
-  background-color: #5995fd;
   color: white;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
   transition: all 0.3s ease;
 }
 
-.btn:hover {
-  background-color: #4d84e2;
-}
-
 .edit-btn {
-  background-color: #5995fd;
+  background-color: black;
 }
 
 .save-btn {
@@ -275,8 +281,8 @@ html {
 /* Responsive design */
 @media (max-width: 1100px) {
   .profile-container {
-    width: 90%; /* Maintain at least 80% on smaller screens */
-    min-width: auto; /* Remove minimum width for smaller screens */
+    width: 90%;
+    min-width: auto;
   }
 }
 
@@ -329,7 +335,6 @@ html {
     box-shadow: none;
   }
 }
-/* Add these styles to your Profile.css file */
 
 .posts-container {
   display: flex;
@@ -464,7 +469,7 @@ html {
 }
 
 button:hover {
-  color: red;
+  color: yellow;
   border: transparent;
 }
 .badges-section {
@@ -476,17 +481,27 @@ button:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 20px;
 }
 
 .badge {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(135deg, #ffcc00, #ff6600);
-  padding: 10px;
+  background: (145deg, #ffffff, #eaeaea);
+  padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border: 2px solid rgba(255, 215, 0, 0.6);
+  /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); */
+  color: rgba(255, 215, 0, 0.6);
+}
+
+.badge p {
+  padding: 0;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .badge-icon {
@@ -495,15 +510,22 @@ button:hover {
 }
 
 .share-badge {
-  margin-top: 5px;
-  padding: 5px 10px;
-  border: none;
-  background: #007bff;
+  background: linear-gradient(90deg, #ffcc00, #ff6600);
   color: white;
-  border-radius: 5px;
+  border: none;
+  border-radius: 30px;
   cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 5px 15px rgba(255, 165, 0, 0.5);
+  transition: all 0.3sease-in-out;
+  margin-top: 10px;
 }
 
 .share-badge:hover {
-  background: #0056b3;
+  transform: scale(1.05);
+}
+
+.share-badge:active {
+  transform: scale(0.95);
 }
