--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -22,8 +22,8 @@
 }
 
 .post-avatar {
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   border-radius: 4px;
   object-fit: cover;
   margin-right: 15px;
@@ -147,7 +147,7 @@
 
 .post-image {
   width: 100%;
-  max-height: 400px;
+  max-height: 500px;
   object-fit: contain;
 }
 
@@ -264,6 +264,9 @@
 }
 
 .action-btn.liked {
+  color: #ff3040;
+}
+.action-btn.like-btn:hover {
   color: #ff3040;
 }
 
