--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -201,14 +201,14 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background: rgba(0, 0, 0, 0.6);
+  line-height: 1;
+  background-color: rgba(0, 0, 0, 0.6);
   color: white;
   border: none;
   border-radius: 50%;
-  width: 24px;
-  height: 24px;
+  width: 30px;
+  height: 30px;
   font-size: 18px;
-  line-height: 1;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -246,6 +246,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
+  align-items: center;
 }
 
 .action-btn {
