--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -57,8 +57,6 @@
     right: 48%;
     transform: translateY(-50%);
     background-color: rgb(46, 112, 187);
-    // background-color: rgb(135, 187, 222);
-    // background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
     transition: 1.8s ease-in-out;
     border-radius: 50%;
     z-index: 6;
@@ -178,12 +176,12 @@
 }
 
 .btn {
-  // width: 150px;
-  // background-color: #5995fd;
-  // background-color: rgb(46, 112, 187);
+  width: 150px;
+  background-color: #5995fd;
+  background-color: rgb(46, 112, 187);
   border: none;
   outline: none;
-  // height: 49px;
+  height: 49px;
   border-radius: 49px;
   color: #fff;
   text-transform: uppercase;
@@ -250,6 +248,7 @@
   height: fit-content;
   font-weight: 600;
   font-size: 1rem;
+  padding: 5px 15px;
 
   &:hover {
     border: 2px solid #ffc719;
@@ -425,14 +424,6 @@
 }
 
 @media (max-width: 570px) {
-  // .red-alert {
-  //   background-color: #f44336;
-  //   color: white;
-  //   word-break: break;
-  //   width: 18rem;
-  //   height: 2rem;
-  //   font-size: 0.6rem;
-  // }
   form {
     padding: 0 1.5rem;
   }
@@ -457,10 +448,3 @@
     }
   }
 }
-// @media (min-width: 1370px) {
-//   .red-alert {
-//     padding: 20px;
-//     font-size: 1rem;
-//     width: fit-content;
-//   }
-// }
